--- a/telaLogin.html
+++ b/telaLogin.html
@@ -110,7 +110,7 @@
       <button type="submit" class="login-button">Entrar</button>
     </form>
 
-    <a class="link-cadastro" href="view/cadastroUsuario.html"><i class="fas fa-user-plus"></i> Cadastrar Usuário</a>
+   <!-- <a class="link-cadastro" href="view/cadastroUsuario.html"><i class="fas fa-user-plus"></i> Cadastrar Usuário</a> -->
 
     <div class="footer-text">
       © 2025 AudCheck. Todos os direitos reservados.
