atualização da guia quem somos

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ padding-top: 100px; /* altura suficiente para passar da navbar */
     transform: translateX(-50%);
   }
 }
+
 </style>
 </head>
 <body>
@@ -136,14 +137,17 @@ padding-top: 100px; /* altura suficiente para passar da navbar */
           </li>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fas fa-info-circle"></i>Quem Somos?</a>
+          <a class="nav-link" href="view/quemSomos.html"><i class="fas fa-info-circle"></i>Quem Somos?</a>
         </li>
         </ul>
       </div>
     </div>
+   
   </nav>
 
   <!-- Conteúdo abaixo do menu -->
+   
+
   <div class="content">
     <h2>Bem-vindo ao <strong>AudCheck</strong></h2>
     <div class="logo-container">
@@ -153,7 +157,7 @@ padding-top: 100px; /* altura suficiente para passar da navbar */
   <div id="carouselAudCheck" class="carousel slide mt-4" data-bs-ride="carousel">
     <div class="carousel-inner">
 
-      <div class="carousel-item active">
+        <div class="carousel-item active">
         <img src="imagens/análisesprecisos.jpeg" class="d-block w-100 rounded" alt="Análises Precisos">
        <div class="carousel-caption d-none d-md-block"> 
           <h5>Análises Precisas</h5>
@@ -207,10 +211,9 @@ padding-top: 100px; /* altura suficiente para passar da navbar */
   <h2 class="text-center mt-5">Empresas que Atuamos:</h2>
   <div class="slider-container">
     <div class="slider-track">
-      <img src="imagens/bonnocolchoes.jpg" alt="Bonno Colchões">
+      <img src="imagens/bonnoazul.jpg" alt="Bonno Colchões">
       <img src="imagens/solarmoveiseeletros.jpeg" alt="Solar Móveis e Eletros">
-      <img src="imagens/jhc.jpg" alt="jhc">
-      <img src="imagens/cordeiro.png" alt="cordeiro">
+   
       
       <!-- Repita ou adicione mais empresas se quiser -->
     </div>
