atualização imagens carrossel

--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@ padding-top: 100px; /* altura suficiente para passar da navbar */
 .slider-track {
   display: flex;
   width: fit-content;
-  animation: scroll-left 30s linear infinite;
+  animation: scroll-left 10s linear infinite;
 }
 
 .slider-track img {
   width: 180px;
-  height: auto;
+  height: 40px;
+  object-fit: cover;
   margin: 0 30px;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -213,6 +214,11 @@ padding-top: 100px; /* altura suficiente para passar da navbar */
     <div class="slider-track">
       <img src="imagens/bonnoazul.jpg" alt="Bonno Colchões">
       <img src="imagens/solarmoveiseeletros.jpeg" alt="Solar Móveis e Eletros">
+      <img src="imagens/agnus.jpeg" alt="angus">
+      <img src="imagens/cordeiro.jpeg" alt="cordeiros">
+      <img src="imagens/solab.jpeg" alt="solab">
+      <img src="imagens/jhc.jpeg" alt="jhc">
+      
    
       
       <!-- Repita ou adicione mais empresas se quiser -->
